k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: sample-app
  name: sample-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    run: sample-app
  type: ClusterIP
